--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
 
     <footer class="page-footer">
 	<div class="container">
-      Связаться со мной можно также в телеграм.
+	<a class="footer-email"
+	href="mailto:ratdrakon.black">ratdrakon.black</a>
+	<a class="footer-phone"
+	href="tel:+78985">Связаться со мной можно также в телеграм.</a>
 	  </div>
     </footer>
   </body>
